# MeetingPolice

./: .env.example  .gitignore  README.md  merge_scenario1.py  pyproject.toml  requirements.txt  satomin_memo  バージョン管理.url
backend/: config.py  main.py
backend/admin/: controller.py  routes.py
backend/data/: test_meeting_agenda.txt
backend/models/: agenda_model.py  analysis_model.py  meeting_model.py  summary_model.py  transcript_model.py
backend/poc/: controller.py  routes.py
backend/poc_satomin/: controller.py  routes.py
backend/services/: bedrock_utils.py  comprehend_utils.py  repository.py  s3_storage.py  transcribe_stream.py  vonage_client.py
backend/session/: controller.py  routes.py
backend/utils/: auth_aws.py  auth_vonage.py  time_utils.py
docs/: AGENTS.md  API_SPEC.md  MeetingPoliceEC2-SetupGuide.md  MeetingPoliceEC2-t3small.yaml  POC_ANALYSIS.md  meetingpolice-t3small.yaml
docs/test/: アジェンダ1.txt  シナリオ①アジェンダ.txt  音声1-1.txt  音声1-2.txt
docs/test/シナリオ2/: アジェンダ.txt  シナリオ2全文.txt
docs/test/シナリオ①/: シナリオ①音声用テキスト.txt
frontend/: README.md
frontend/admin-app/: index.html  package.json  vite.config.ts
frontend/admin-app/src/: App.tsx  styles.css  types.ts
frontend/session-app/: package-lock.json  package.json  vite.config.ts
frontend/session-app/public/: index.html
nginx/: default.conf
scripts/: deploy.sh  generate_env_template.py  generate_test_audio.py  merge_audio_files.py  run_all.sh  start_backend.sh  start_dev.sh  start_frontend.sh  sync_s3_data.py
tests/: conftest.py  test_bedrock.py  test_s3_storage.py  test_transcribe.py
(+68 files in other folders)
